--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,4 +2,4 @@
 <p>This page is "Iam". </p>
 <p>Please click SignIn below</p>
 
-<%= link_to "Sign In", "#" %>
+<%= link_to "Sign In", login_path %>
