--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,17 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-expand-lg bg-primary">
+      <%= link_to "Iam", root_path, class: "navbar-brand text-light" %>
+    
+      <ul class="navbar-nav ms-auto">
+        <% if logged_in? %>
+          <li class="nav-item"><%= link_to "Profile", user_path(current_user),  class: "nav-link text-light" %></li>
+          <li class="nav-item"><%= link_to "Logout", logout_path, data: {"turbo-method": :delete}, class: "nav-link text-light" %></li>
+        <% end %>
+      </ul>
+    </nav>
+
     <%= yield %>
   </body>
 </html>
