--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Sign up</h1>
+<h1>Edit</h1>
 
 <%= form_with(model: @user) do |f| %>
     <div class="mb-3">
@@ -21,5 +21,5 @@
         <%= f.password_field :password_confirmation, class: "form-control" %>
     </div>
 
-    <%= f.submit "Create my account" %>
+    <%= f.submit "Save changes" %>
 <% end %>
