ユーザー一覧追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
         <% if logged_in? %>
           <li class="nav-item"><%= link_to "Profile", user_path(current_user),  class: "nav-link text-light" %></li>
           <li class="nav-item"><%= link_to "Setting", edit_user_path(current_user),  class: "nav-link text-light" %></li>
+          <li class="nav-item"><%= link_to "Index", users_path,  class: "nav-link text-light" %></li>
           <li class="nav-item"><%= link_to "Logout", logout_path, data: {"turbo-method": :delete}, class: "nav-link text-light" %></li>
         <% end %>
       </ul>
