--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,6 +6,11 @@
             <div class="ms-2 me-auto">
                 <div class="fw-bold"><%= user.name%></div>
                 <%= user.user_id %>
+
+                <% if current_user.admin? && !current_user?(user) %>
+                    | <%= link_to "delete", user, data: { "turbo-method": :delete,
+                                                          turbo_confirm: "You sure?" } %>
+                <% end %>
             </div>
         </li>
     <% end %>
