--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,11 +5,15 @@
         <li class="list-group-item d-flex justify-content-between align-items-start">
             <div class="ms-2 me-auto">
                 <div class="fw-bold"><%= user.name%></div>
-                <%= user.user_id %>
+                <%= link_to user.user_id, user_path(user) %>
 
                 <% if current_user.admin? && !current_user?(user) %>
-                    | <%= link_to "delete", user, data: { "turbo-method": :delete,
+                    | 
+                    <%= link_to "delete", user, data: { "turbo-method": :delete,
                                                           turbo_confirm: "You sure?" } %>
+
+                <% else %>
+                    | current user
                 <% end %>
             </div>
         </li>
