--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,8 +24,8 @@
               Post Setting
             </a>
             <ul class="dropdown-menu">
-              <li class="nav-item"><%= link_to "New", new_post_path,  class: "nav-link" %></li>
-              <li class="nav-item"><%= link_to "Index", posts_path,  class: "nav-link" %></li>
+              <li><%= link_to "New", new_post_path,  class: "dropdown-item" %></li>
+              <li><%= link_to "Index", posts_path,  class: "dropdown-item" %></li>
             </ul>
           </li>
 
