--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,7 +4,12 @@
     <% @post.each do |post| %>
         <li class="list-group-item d-flex justify-content-between align-items-start">
             <div class="ms-2 me-auto">
-                <div class="fw-bold"><%= post.title%></div>
+                <div class="fw-bold"><%= link_to post.title, post_path(post) %></div>
+
+                <% if current_user.admin? %>
+                    <%= link_to "delete", post, data: { "turbo-method": :delete,
+                                                        turbo_confirm: "You sure?" } %>
+                <% end %>
             </div>
         </li>
     <% end %>
