--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,2 +1,8 @@
-<h1><%= @post.title %></h1>
-<%= @post.content %>
+<div class="card mx-5 my-3 shadow">
+    <div class="mx-3 my-3">
+        <h1 class="card-title"><%= @post.title %></h1>
+        <div class="card-text">
+            <%= @post.content %>
+        </div>
+    <div>
+</div>
