--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,14 +13,14 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
-    <nav class="navbar navbar-expand-lg bg-primary">
-      <%= link_to "Iam", root_path, class: "navbar-brand text-light" %>
+  <body class="bg-light">
+    <nav class="navbar navbar-expand-lg bg-white shadow">
+      <%= link_to "Iam", root_path, class: "navbar-brand ms-3 fw-bold" %>
     
       <ul class="navbar-nav ms-auto">
         <% if logged_in? %>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Post Setting
             </a>
             <ul class="dropdown-menu">
@@ -30,7 +30,7 @@
           </li>
 
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               User Setting
             </a>
             <ul class="dropdown-menu">
@@ -41,7 +41,7 @@
             </ul>
           </li>
   
-          <li class="nav-item"><%= link_to "Logout", logout_path, data: {"turbo-method": :delete}, class: "nav-link text-light" %></li>
+          <li class="nav-item"><%= link_to "Logout", logout_path, data: {"turbo-method": :delete}, class: "nav-link" %></li>
         <% end %>
       </ul>
     </nav>
