--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="card mx-5 my-3 shadow">
-    <h1 class="text-center">Post</h1>
+    <h1 class="text-center">Edit</h1>
     <div class="mx-5 my-3">
         <%= form_with(model: @post) do |f| %>
             <%= f.text_field :title, placeholder: "タイトル", class: "my-3 w-100" %>
