--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,6 +10,8 @@
                     <div><%= link_to "Read More", post_path(post), class: "btn btn-primary" %></div>
 
                     <% if current_user.admin? %>
+                        <%= link_to "edit", edit_post_path(post) %>
+                        |
                         <%= link_to "delete", post, data: { "turbo-method": :delete,
                                                             turbo_confirm: "You sure?" } %>
                     <% end %>
