--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,25 +1,28 @@
-<h1>Edit</h1>
+<div class="d-flex justify-content-center  mt-5">
+    <div class="card text-center shadow" style="width: 26rem">
 
-<%= form_with(model: @user) do |f| %>
-    <div class="mb-3">
-        <%= f.label :name, class: "form-label" %>
-        <%= f.text_field :name, class: "form-control" %>
+        <h1>Edit</h1>
+
+        <%= form_with(model: @user) do |f| %>
+            <div class="col-sm mx-3 my-3">
+                <%= f.text_field :name, class: "form-control", placeholder: "Name" %>
+            </div>
+
+            <div class="col-sm mx-3 my-3">
+                <%= f.text_field :user_id, class: "form-control", placeholder: "User ID" %>
+            </div>
+
+            <div class="col-sm mx-3 my-3">
+                <%= f.password_field :password, class: "form-control", placeholder: "Password" %>
+            </div>
+
+            <div class="col-sm mx-3 my-3">
+                <%= f.password_field :password_confirmation, class: "form-control", placeholder: "Password Confirmation" %>
+            </div>
+
+            <div class="mx-3 my-3">
+                <%= f.submit "Save changes", class: "btn btn-primary w-100" %>
+            </div>
+        <% end %>
     </div>
-
-    <div class="mb-3">
-        <%= f.label :user_id, class: "form-label" %>
-        <%= f.text_field :user_id, class: "form-control" %>
-    </div>
-
-    <div class="mb-3">
-        <%= f.label :password, class: "form-label" %>
-        <%= f.password_field :password, class: "form-control" %>
-    </div>
-
-    <div class="mb-3">
-        <%= f.label :password_confirmation, class: "form-label" %>
-        <%= f.password_field :password_confirmation, class: "form-control" %>
-    </div>
-
-    <%= f.submit "Save changes" %>
-<% end %>
+</div>
