--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,6 +2,7 @@
     <div class="mx-3 my-3">
         <h1 class="card-title"><%= @post.title %></h1>
         <div class="card-text">
+            <%= @category.category %>
             <%= @post.content %>
         </div>
     <div>
