--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,3 +1,5 @@
+<% provide(:title, 'Post New') %>
+
 <div class="card mx-5 my-3 shadow">
     <div class="card-body">
         <h1 class="text-center card-title">Post</h1>
