--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,5 @@
+<% provide(:title, 'User New') %>
+
 <div class="d-flex justify-content-center  mt-5">
     <div class="card text-center shadow" style="width: 26rem">
         <div class="card-body">
