--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Myapp</title>
+    <title><%= full_title(yield(:title)) %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -14,38 +14,7 @@
   </head>
 
   <body class="bg-light">
-    <nav class="navbar navbar-expand-lg bg-white shadow">
-      <%= link_to "Iam", root_path, class: "navbar-brand ms-3 fw-bold" %>
-    
-      <ul class="navbar-nav ms-auto">
-        <% if logged_in? %>
-          <% if current_user.admin?  %>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Post
-              </a>
-              <ul class="dropdown-menu">
-                <li><%= link_to "New", new_post_path,  class: "dropdown-item" %></li>
-                <li><%= link_to "Index", posts_path,  class: "dropdown-item" %></li>
-              </ul>
-            </li>
-
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                User
-              </a>
-              <ul class="dropdown-menu">
-                <li class="nav-item"><%= link_to "New", new_user_path,  class: "nav-link" %></li>        
-                <li class="nav-item"><%= link_to "Profile", user_path(current_user),  class: "nav-link" %></li>
-                <li class="nav-item"><%= link_to "Setting", edit_user_path(current_user),  class: "nav-link" %></li>
-                <li class="nav-item"><%= link_to "Index", users_path,  class: "nav-link" %></li>          
-              </ul>
-            </li>
-          <% end %>
-          <li class="nav-item"><%= link_to "Logout", logout_path, data: {"turbo-method": :delete}, class: "nav-link" %></li>
-        <% end %>
-      </ul>
-    </nav>
+    <%= render 'layouts/header' %>
 
     <% flash.each do |message_type, message| %>
       <div class="alert alert-<%= message_type %>"><%= message %></div>
