--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,3 +1,5 @@
+<% provide(:title, 'Post Edit') %>
+
 <div class="card mx-5 my-3 shadow">
     <div class="card-body">
         <h1 class="text-center card-title">Edit</h1>
