--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,5 @@
+<% provide(:title, 'Post Index') %>
+
 <h1 class="text-center my-3">Welcome to My Blog</h1>
 
 <% @post.select(:category_id).distinct.each do |category| %>
