--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,5 @@
+<% provide(:title, 'Post Show') %>
+
 <div class="card mx-5 my-3 shadow">
     <div class="mx-3 my-3">
         <h1 class="card-title"><%= @post.title %></h1>
