追加 skillのedit,delete

--- a/app/views/user_skills/edit.html.erb
+++ b/app/views/user_skills/edit.html.erb
@@ -1,6 +1,6 @@
-<% provide(:title, 'Skill New') %>
+<% provide(:title, 'Skill Edit') %>
 
-<h1>UserSkills#new</h1>
+<h1>UserSkills#edit</h1>
 
 <div class="card mx-5 my-3 shadow">
     <div class="card-body">
@@ -17,7 +17,7 @@
                 </div>
 
                 <div class="mx-3 my-3">
-                    <%= f.submit "Create Skill Detail", class: "btn btn-primary w-100" %>
+                    <%= f.submit "Edit Skill Detail", class: "btn btn-primary w-100" %>
                 </div>
             <% end %>
         </div>
