--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,14 +9,17 @@
     
     <h2>スキルマップ</h2>
     <% if current_user.admin?  %>
-        <%= link_to "new", new_user_user_skill_path(@posted_user) %>
+        <%= link_to "new", new_user_user_skill_path(user_id: @posted_user) %>
     <% end %>
     <div>
-        <% @user_skill.each do |user| %>
-            <% @skill.where(id: user.skill_id).each do |skill| %>
-                <%= skill.skill_name %>
-            <% end %>
-            <%= user.detail %><br>
+        <% @user_skill.sort_by {|sorted_user_skill| sorted_user_skill.id }.each do |u_s| %>
+            <div>
+                <%= @skill.find(u_s.skill_id).skill_name %>
+                <%= u_s.detail %>
+
+                <%= link_to "edit", edit_user_user_skill_path(user_id: @posted_user, id: u_s.id) %>
+                <%= link_to "delete", user_user_skill_path(user_id: @posted_user, id: u_s.id), data: { "turbo-method": :delete, turbo_confirm: "You sure?" }  %>
+            </div>
         <% end %>
     </div>
 
