--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,5 +8,6 @@
     <p class="my-3"><%= @posted_user.profile %></p>
     
     <%= render 'posts/skill' %>
+    <%= render 'posts/project' %>
     <%= render 'posts/post' %>
 </div>
