--- a/app/views/posts/_project.html.erb
+++ b/app/views/posts/_project.html.erb
@@ -4,6 +4,9 @@
 <% @project.sort_by {|sorted_project| sorted_project.id }.each do |project| %>
     <div>
         <%= project.company.company_name %>
+        <% project.skills.each do |skill| %>
+            <%= skill.skill_name %>
+        <% end %>
         <%= project.summary %>
         <%= project.incharge %>
         <%= project.achivement %>
