--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -10,6 +10,11 @@
                     <%= f.collection_select :company_id, Company.all, :id, :company_name %>
                     <%= link_to "カテゴリの追加", new_user_company_path %>
                 </div>
+                <div>
+                    スキル:
+                    <%= f.collection_select :skill_id, Skill.all, :id, :skill_name, {:prompt => ""}, {multiple: true} %>
+                    <%= link_to "スキルの追加", new_user_project_skill_path %>
+                </div>
                 <%= f.text_area :summary, placeholder: "Summay", class: "my-3 w-100" %>
                 <%= f.text_area :incharge, placeholder: "InCharge", class: "my-3 w-100" %>
                 <%= f.text_area :achivement, placeholder: "Achivement", class: "my-3 w-100"  %>
