--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -16,7 +16,7 @@
         <%= render 'posts/project' %>
     </div>
     
-    <div class="my-3">
+    <div class="my-3 mx-3">
         <%= render 'posts/post' %>
     </div>
 </div>
