--- a/app/views/posts/_project.html.erb
+++ b/app/views/posts/_project.html.erb
@@ -3,25 +3,25 @@
         <h2>プロジェクト経歴</h2>
         <%= link_to "new", new_user_project_path(@posted_user) %>
 
-        <% @project.sort_by {|sorted_project| sorted_project.id }.each do |project| %>
-            <div class="rounded bg-secondary-subtle my-3">
-                <p>企業名 : <%= project.company.company_name %></p>
-                <p>概要　 : <%= project.summary %></p>
+        <% @project.sort_by {|sorted_project| sorted_project.start_on }.each do |project| %>
+            <div class="rounded bg-secondary-subtle mx-3 my-3">
+                <div class="mx-3">
+                    <p class="mb-0">企業名 : <%= project.company.company_name %></p>
+                    <p class="mb-0">期間　 : <%= project.start_on %> ~  <%= project.end_on %></p>
+                    <p class="mb-0">概要　 : <%= project.summary %></p>
+                    <p class="mb-0">担当　 : <%= project.incharge %></p>
+                    <p class="mb-0">スキル :
+                        <% project.skills.each do |skill| %>
+                            <%= skill.skill_name %>
+                        <% end %>
+                    </p>
+                    <p class="mb-0">実績　 : <br><%=safe_join(project.achivement.split("\n"),tag(:br))%></p>
 
-                <p>担当　 : <%= project.incharge %></p>                
-                
-                <p>スキル :
-                    <% project.skills.each do |skill| %>
-                        <%= skill.skill_name %>
+                    <% if current_user.admin?  %>
+                        <%= link_to "edit", edit_user_project_path(user_id: @posted_user, id: project.id) %>
+                        <%= link_to "delete", user_project_path(user_id: @posted_user, id: project.id), data: { "turbo-method": :delete, turbo_confirm: "You sure?" }  %>
                     <% end %>
-                </p>
-
-                <p>実績　 : <br><%=safe_join(project.achivement.split("\n"),tag(:br))%></p>
-
-                <% if current_user.admin?  %>
-                    <%= link_to "edit", edit_user_project_path(user_id: @posted_user, id: project.id) %>
-                    <%= link_to "delete", user_project_path(user_id: @posted_user, id: project.id), data: { "turbo-method": :delete, turbo_confirm: "You sure?" }  %>
-                <% end %>
+                </div>
             </div>
         <% end %>
     </div>
